packages/ibm-products-web-components/src/utilities/overflow-handler/story-styles.scss
/*
* Copyright IBM Corp. 2025, 2025
*
* This source code is licensed under the Apache-2.0 license found in the
* LICENSE file in the root directory of this source tree.
*/

@use '@carbon/styles' with (
  $font-path: '@ibm/plex'
);
@use '@carbon/styles/scss/spacing';
@use '@carbon/styles/scss/colors';
@use '@carbon/styles/scss/type';
@use '@carbon/styles/scss/components/tag';
@use '@carbon/styles/scss/config' as carbon-config;

$story-prefix: 'overflow-handler-stories__';

.slider {
  margin-block-end: spacing.$spacing-05;
}

.parent {
  overflow: scroll;
  margin-block-start: spacing.$spacing-04;
  max-inline-size: 1000px;
  scrollbar-width: none;
}

.items {
  display: flex;
  // Spacing between tags.
  gap: spacing.$spacing-03;
  white-space: nowrap;

  &--vertical {
    flex-direction: column;
    block-size: calc(100% - spacing.$spacing-06);
  }
}

// todo - create annotation component
.annotation {
  /* stylelint-disable-next-line carbon/theme-use */
  border: 1px dashed colors.$purple-40;
  inline-size: 100%;
}

.annotation__label {
  @include type.type-style('code-01');

  display: inline-flex;
  padding: spacing.$spacing-02;
  background: tag.$tag-background-purple;
  /* stylelint-disable-next-line carbon/theme-use */
  color: tag.$tag-color-purple;
  column-gap: spacing.$spacing-02;
}

.annotation__content {
  padding: spacing.$spacing-05;
  block-size: calc(100% - spacing.$spacing-06);
}

[data-hidden]:not([data-fixed]) {
  display: none;
}

.#{carbon-config.$prefix}-tag:not(:defined) {
  display: none;
}

